responsives tweaks to fix layout bugs

--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -115,7 +115,7 @@ h3,
     line-height: 1.043478261em;
     margin-top: 1.04347826em;
     margin-bottom: 1.04347826em;
-    font-weight: 400;
+    /*font-weight: 400;*/
     /*font-size: 1.4em;*/
     /*line-height: 1.2;*/
 }
