--- a/assets/styles/header-footer.css
+++ b/assets/styles/header-footer.css
@@ -108,7 +108,6 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     line-height: 48px;
-    font-size: 1.2em;
     color: #fff;
     text-align: right;
     -webkit-tap-highlight-color: transparent;
